syntax ="proto3";

package sec09;

option java_package ="com.grpc.models.sec09";
option java_multiple_files = true;

message BalanceCheckRequest {
    int32 account_number = 1;
}

message AccountBalance {
    int32 account_number = 1;
    int32 balance = 2;
}

message Money{
    int32 amount = 1;
}

service BankService{
  /*
  Unary account number should be beteween 1 and 10
   */
    rpc GetAccountBalance (BalanceCheckRequest) returns (AccountBalance);
    /*
    Server streaming
    - account number should be between 1 and 10
    - amount should be 10 multiples
    - account should have sufficient balance
     */
    rpc Withdraw (BalanceCheckRequest) returns (stream Money);
}